package SAAS.UAC.UPR;

public enum DataOperation {
    WRITE, READ, DELETE, UPDATE
}
