package SAAS.UAC.UPR;

public enum PermissionLevel {
    MODULE, PAGE, FUNCTION
}
