@startuml
'https://plantuml.com/class-diagram

'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

abstract class Permission {
- permissionID : String
- permissionName : String
}

class FunctionalPermission {
- functionIDList : Hashset<String>
- permissionLevel : PermissionLevel
}

class DataPermission {
- dataLocation : String
- dataOperationList : HashSet<DataOperation>
}

Permission <|-- FunctionalPermission
Permission <|-- DataPermission


enum PermissionLevel {
    MODULE,
    PAGE,
    FUNCTION
}

enum DataOperation {
    READ,
    WRITE,
    DELETE,
    UPDATE
}

@enduml